# vyvodi

./: .editorconfig  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
vyvodi/backend/: __init__.py  layers.py
vyvodi/formulate/: inputs.py  transforms.py
vyvodi/formulate/terms/: call.py  call_utils.py  type_checker.py  variable.py
