[tool.poetry]
name = "vyvodi"
version = "0.0.1"
description = "custom tensorflow tools"
license = "Apache-2.0"
authors = ["nickolasgryga <nick@gryga.dev>"]
readme = "README.md"
repository = "https://github.com/OpenORMS/vyvodi"
keywords = [
    "tensorflow", 
    "mixed-effect", 
    "hierarchical-models", 
    "bayesian", 
    "machine-learning",
    "statistics",
    "data-science"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow-probability = "^0.14.1"
formulae = "^0.2.0"


[tool.poetry.dev-dependencies]
mypy = "^0.931"

wemake-python-styleguide = "^0.16"
flake8-pytest-style = "^1.6"
nitpick = "^0.31"

safety = "^1.10"

pytest = "^7.0"
pytest-cov = "^3.0"
pytest-randomly = "^3.11"

markdown = "^3.3.6"
sphinx = "^4.4"
sphinx-autodoc-typehints = "^1.16"
doc8 = "^0.10"
m2r2 = "^0.3"
tomlkit = "^0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"